--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,6 +1,2 @@
-<h1>Pages#index</h1>
-<% @characters.each do |char| %>
-  <p><%=char.house %></p>
-  <p><%=char.locatione %></p>
-  <p><%=char.house %></p>
-<% end %>
+<h1>Pagina de prueba</h1>
+
